--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ env:
   SV_IP_ADDRESS: ${{ secrets.SV_IP_ADDRESS }}
   SV_USER: ${{ secrets.SV_USER }}
   BUILD_DIR_PATH: ${{ vars.BUILD_DIR_PATH }}
-  BUILD_DIR_NAME: ${{ vars.BUILD_DIR_NAME }}
   CI: false
 
 jobs:
@@ -39,8 +38,7 @@ jobs:
         run: npm run build
 
       - name: Package Build
-        run: zip -r dist.zip 'dist/'
-        # run: zip -r ${{ env.BUILD_DIR_NAME }}.zip ${{ env.BUILD_DIR_NAME }}
+        run: zip -r dist.zip {.,}*
 
       - name: Send Build to Server
         uses: appleboy/scp-action@master
@@ -50,7 +48,7 @@ jobs:
           port: 22
           key: ${{ env.SSH_PRIVATE_KEY }}
           passphrase: ${{ env.SV_KEY_PASS }}
-          source: "build.zip"
+          source: "dist.zip"
           target: ${{ env.BUILD_DIR_PATH }}
 
       - name: Go Live
@@ -61,7 +59,8 @@ jobs:
           key: ${{ env.SSH_PRIVATE_KEY }}
           passphrase: ${{ env.SV_KEY_PASS }}
           script: |
-            cd '~/code/narwhal_leads_test/'
+            cd ${{ env.BUILD_DIR_PATH }}
             unzip dist.zip
-            # cd ${{ env.BUILD_DIR_PATH }}
-            # unzip ${{ env.BUILD_DIR_NAME }}.zip
+            pm2 restart 1
+            rm dist.zip
+            rm -rf 'NarwhalLeads-Backend'
