- Changes in AddCard Api and Payments workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ node_modules
 public/category-data
 public/profile-image
 dist
-
-build
+.env.example
+example.live
+.DS_Store
+.github/.DS_Store
+public/.DS_Store
+src/.DS_Store
