--- a/.github/workflows/production.workflow.yml
+++ b/.github/workflows/production.workflow.yml
@@ -71,7 +71,7 @@ jobs:
           passphrase: ${{ env.SV_KEY_PASS }}
           script: |
             cd ${{ env.BUILD_DIR_PATH }}
-            pm2 restart all
+            pm2 restart all --update-env
 
       - name: Cleanup
         uses: appleboy/ssh-action@v0.1.9
