--- a/.github/workflows/staging.workflow.yml
+++ b/.github/workflows/staging.workflow.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          ref: 'production'
+          ref: 'staging'
 
       - name: Install dependencies
         run: npm install
@@ -71,7 +71,7 @@ jobs:
           passphrase: ${{ env.SV_KEY_PASS }}
           script: |
             cd ${{ env.BUILD_DIR_PATH }}
-            pm2 restart all
+            pm2 restart all --update-env
 
       - name: Cleanup
         uses: appleboy/ssh-action@v0.1.9
