- Changes related to promo link functionality - Fixes related to workflow environment variables

--- a/.github/workflows/production.workflow.yml
+++ b/.github/workflows/production.workflow.yml
@@ -11,6 +11,7 @@ env:
   SV_IP_ADDRESS: ${{ secrets.SV_IP_ADDRESS }}
   SV_USER: ${{ secrets.SV_USER }}
   BUILD_DIR_PATH: ${{ vars.BUILD_DIR_PATH }}
+  REPO_DIR_NAME: ${{ vars.REPO_DIR_NAME }}
   CI: false
 
 jobs:
@@ -63,4 +64,4 @@ jobs:
             unzip -o dist.zip
             pm2 restart all
             rm dist.zip
-            rm -rf 'NarwhalLeads-Backend'
+            rm -rf env.REPO_DIR_NAME
