--- a/.github/workflows/staging.workflow.yml
+++ b/.github/workflows/staging.workflow.yml
@@ -11,6 +11,7 @@ env:
   SV_IP_ADDRESS: ${{ secrets.STAGING_SV_IP_ADDRESS }}
   SV_USER: ${{ secrets.STAGING_SV_USER }}
   BUILD_DIR_PATH: ${{ vars.STAGING_BUILD_DIR_PATH }}
+  REPO_DIR_NAME: ${{ vars.REPO_DIR_NAME }}
   CI: false
 
 jobs:
@@ -63,4 +64,4 @@ jobs:
             unzip -o dist.zip
             pm2 restart all
             rm dist.zip
-            rm -rf 'NarwhalLeads-Backend'
+            rm -rf env.REPO_DIR_NAME
