--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "xlsx": "^0.18.5"
   },
