--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/follow-redirects": "^1.14.2",
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.7.34",
     "@types/multer": "^1.4.5",
+    "@types/node-cron": "^3.0.9",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33"
