--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.0.90",
+  "version": "1.0.91",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@casl/ability": "^6.5.0",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "casl": "^1.1.0",
+    "child_process": "^1.0.2",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -35,6 +38,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "stripe": "^13.10.0",
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "twilio": "^4.17.0",
