Production v1.3.1 - T676: Static text for window and doors leads - Auto charge fixed - Added checks for cron scheduling expression - Fixed T700 Lead Accept / Reject error. - Fixes related to email alerts of failed payments

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-chat": "ts-node-dev --respawn --rs --transpile-only ./src/indexChat.ts",
     "build": "rimraf ./dist && tsc --build",
     "start": "node ./dist",
-    "test": "ts-node-dev --respawn --rs --transpile-only permissionScript.ts"
+    "test": "ts-node-dev --respawn --rs --transpile-only script.ts"
   },
   "author": "",
   "license": "ISC",
