--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.3.19",
+  "version": "1.3.20",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -45,6 +45,8 @@
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "twilio": "^4.17.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
