--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.3.9",
+  "version": "1.3.22",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^6.0.0",
+    "p-queue": "^6.6.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -44,6 +45,8 @@
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "twilio": "^4.17.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
