--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+logs
 .env
 .idea
 public/category-data
@@ -10,4 +11,3 @@ example.live
 .github/.DS_Store
 public/.DS_Store
 src/.DS_Store
-package-lock.json
