--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ node_modules
 public/category-data
 public/profile-image
 dist
+logs
 .env.example
 example.live
 .DS_Store
 .github/.DS_Store
 public/.DS_Store
 src/.DS_Store
-package-lock.json
