--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.3.23",
+  "version": "1.3.24",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "dev-chat": "ts-node-dev --respawn --rs --transpile-only ./src/indexChat.ts",
     "build": "rimraf ./dist && tsc --build",
     "start": "node ./dist",
-    "test": "ts-node-dev --respawn --rs --transpile-only script.ts"
+    "test": "ts-node-dev --respawn --rs --transpile-only script.ts",
+    "seed": "ts-node ./src/database/seeds/index.ts"
   },
   "author": "",
   "license": "ISC",
