--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.3.25",
+  "version": "1.3.26",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "puppeteer": "^22.0.0",
     "stripe": "^13.10.0",
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
