--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "ES2019",
-      "lib": ["ES2020"],
+      "lib": ["ES2020", "DOM"],
       "module": "commonjs",
       "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
