--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "narwhal-leads",
-  "version": "1.3.26",
+  "version": "1.3.27",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "build": "rimraf ./dist && tsc --build",
     "start": "node ./dist",
     "test": "ts-node-dev --respawn --rs --transpile-only script.ts",
-    "seed": "ts-node ./src/database/seeds/index.ts"
+    "seed": "ts-node ./src/database/seeds/index.ts",
+    "create": "ts-node-dev --respawn --rs --transpile-only ./src/utils/sendgrid/createCustomFeildSendgrid.ts"
   },
   "author": "",
   "license": "ISC",
