--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@casl/ability": "^6.5.0",
     "@sendgrid/mail": "^7.7.0",
     "@slack/webhook": "^7.0.2",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
