--- a/.github/workflows/production.workflow.yml
+++ b/.github/workflows/production.workflow.yml
@@ -31,6 +31,14 @@ jobs:
         with:
           ref: 'production'
 
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         run: npm install
 
